Use Stream.toList() instead of collect(Collectors.toList())